--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.4.1
+  animated_text_kit: ^4.2.2
+  image_picker: ^1.1.2
+  geolocator: ^13.0.2
+  fluttertoast: ^8.2.10
+  rename: ^3.0.2
+
   flutter:
-    sdk: flutter
+    sdk: flutter   
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +44,21 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.14.2"
+  flutter_native_splash: ^2.4.3
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images.png"
+  remove_alpha_ios: true
+
+flutter_native_splash:
+  color: "#42a5f5"
+  image: "assets/images.png"
+  android: true
+  ios: true
+
   flutter_test:
     sdk: flutter
 
@@ -62,6 +84,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
